migdb.qvto/transforms/tests/errors/error_addClass1b.qvto
import builder_errors;
modeltype ERR uses "http://www.collectionspro.eu/jam/mm/errors";

transformation error_addClass1b(out inoutModel : ERR);

main(){
	_errorLog(OrderedSet{_evolutionError(1, "Structure contains entity called Tab", "evolution_app.qvto")});
}